--- a/templates/__base__.html
+++ b/templates/__base__.html
@@ -13,11 +13,11 @@
 <header>
     <section class="logo">
         <img alt="logo" src="{% static 'images/magnifier-1787362_1280.png' %}">
-        <h1>SimplyTracker</h1>
+        <h1><a href="/">SimplyTracker</a></h1>
     </section>
     <section class="login-menu">
-        <a href="{% url 'login' %}">Log in</a>
-        <a class="learn-more" href="#">Learn more</a>
+        <a class="btn" href="{% url 'login' %}">Log in</a>
+        <a class="btn learn-more" href="#">Learn more</a>
     </section>
 </header>
 <main>
