--- a/tracker/static/css/style.css
+++ b/tracker/static/css/style.css
@@ -8,6 +8,7 @@ body, html {
     box-sizing: border-box;
 }
 
+
 /* ----- HEADER ----- */
 
 header {
@@ -40,7 +41,6 @@ section.login-menu {
 
 header a.btn {
     display: inline-block;
-    height: 2vh;
     padding: 10px 20px;
     margin: 0 15px;
     background-color: black;
@@ -109,16 +109,40 @@ div.column h3 {
     font-size: 4rem;
 }
 
-/* ----- FOOTER ----- */
+/* ----- MAIN PAGE ----- */
 
+div.main_page {
+    display: flex;
+    height: 88vh;
+}
+
+div.sidebar {
+    width: 17vw;
+    height: 100%;
+    background-color: darkslateblue;
+    color: white;
+}
+
+div.central_page {
+    height: 100%;
+    width: 83vw;
+    background-color: #6F9BE3;
+}
+
+/* ----- FOOTER ----- */
 
 footer {
     height: 4vh;
+    width: 100%;
     padding-top: 10px;
     background-color: #222;
     color: white;
     font-size: 1.5rem;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
+
 footer p {
     margin: 0 0 0 17vw;
 }
