Add main page view

--- a/tracker/static/css/style.css
+++ b/tracker/static/css/style.css
@@ -40,7 +40,6 @@ section.login-menu {
 
 header a.btn {
     display: inline-block;
-    height: 2vh;
     padding: 10px 20px;
     margin: 0 15px;
     background-color: black;
@@ -74,7 +73,7 @@ header a.learn-more:hover {
 /* ----- LANDING PAGE ----- */
 
 main {
-    height: 87vh;
+    height: 88vh;
     background-color: #6F9BE3;
 }
 
@@ -111,6 +110,25 @@ div.column h3 {
 
 /* ----- FOOTER ----- */
 
+div.main-page {
+    height: 88vh;
+    display: flex;
+    background-color: #6F9BE3;
+}
+
+div.sidebar {
+    height: 100%;
+    width: 17vw;
+    background-color: darkslateblue;
+}
+
+div.central-page {
+    height: 100%;
+    width: 83vw;
+}
+
+/* ----- FOOTER ----- */
+
 
 footer {
     height: 4vh;
@@ -118,7 +136,12 @@ footer {
     background-color: #222;
     color: white;
     font-size: 1.5rem;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
+
 footer p {
     margin: 0 0 0 17vw;
 }
