Add create contract view

--- a/accounts/templates/registration/password_change.html
+++ b/accounts/templates/registration/password_change.html
@@ -1,3 +1,5 @@
+{% extends 'main_page.html' %}
+{% block central %}
 <h3>Password change</h3>
 <p>Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you
     typed it in correctly.</p>
@@ -6,3 +8,4 @@
     {{ form.as_p }}
     <input type="submit" value="Change password">
 </form>
+{% endblock %}
