Add create location view

--- a/templates/add_confirmation.html
+++ b/templates/add_confirmation.html
@@ -1,5 +1,7 @@
 {% extends 'main_page.html' %}
 {% load static %}
 {% block central %}
-New {{ object }} has been succesfully created!
+    New {{ object }} has been successfully created!
+
+    <a href="{% url 'main' %}">Back</a>
 {% endblock %}
