--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -17,10 +17,10 @@
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
                         <div class="card-body">
-                            <a href="#">Create new employee</a>
+                            <a href="{% url 'employee_add' %}">Create new employee</a>
                         </div>
                         <div class="card-body">
-                            <a href="#">Create new location</a>
+                            <a href="{% url 'location_add' %}">Create new location</a>
                         </div>
                         <div class="card-body">
                             <a href="#">Create new position</a>
