--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -23,7 +23,7 @@
                             <a href="{% url 'location_add' %}">Create new location</a>
                         </div>
                         <div class="card-body">
-                            <a href="#">Create new position</a>
+                            <a href="{% url 'position_add' %}">Create new position</a>
                         </div>
                     </div>
                 </div>
