Moved all employee view from main page to reports, add employee details view

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -8,5 +8,6 @@
             <input class="login" type="submit" value="Log in">
         </form>
     <p>Forgot your password? <a href="{% url 'reset_password' %}">Reset password</a></p>
+    <p>Not a user? <a href="{% url 'registration' %}">Register</a></p>
     </div>
 {% endblock %}
