--- a/tracker/static/css/style.css
+++ b/tracker/static/css/style.css
@@ -75,7 +75,7 @@ header a.learn-more:hover {
 
 main {
     height: 88vh;
-    background-color: #6F9BE3;
+    background-color: #C6E3C3;
 }
 
 div.main-container {
