--- a/accounts/templates/password_reset/password_reset_sent.html
+++ b/accounts/templates/password_reset/password_reset_sent.html
@@ -2,3 +2,5 @@
 
 <p>We've emailed you instructions for setting your password. If an account is connected with an email you entered, you will receive them shortly.</p>
 <p>If you don't receive an email, please make sure you've entered the correct address. Also, check your spam folder.</p>
+
+<p><a href="{% url 'main' %}">Return to home page</a></p>
