--- a/templates/employee_list.html
+++ b/templates/employee_list.html
@@ -1,3 +1,6 @@
+{% extends 'main_page.html' %}
+{% load static %}
+{% block central %}
 <div class="empl-list">
     <table>
         <tr>
@@ -16,7 +19,7 @@
         {% for employee in employees %}
             <tr>
                 <td>{{ employee.id }}</td>
-                <td>{{ employee.login }}</td>
+                <td><a href="{% url 'employee_details' employee.id %}">{{ employee.login }}</a></td>
                 <td>{{ employee.first_name }}</td>
                 <td>{{ employee.last_name }}</td>
                 {% for contract in contracts %}
@@ -42,3 +45,4 @@
         {% endfor %}
     </table>
 </div>
+{% endblock %}
